# Intelligent-Passport-OCR-Information-Extraction-System

./: .gitignore  README.md  extract.py  main.py  prepare_dataset.py  pyproject.toml  train.py
backend/: database.py  main.py  models.py  ocr_service.py  requirements.txt
dataset/: data.yaml
dataset/labels/train/: (13).txt  (21).txt  (26).txt  (27).txt  (3).txt  (32).txt  (33).txt  (39).txt  (42).txt  (45).txt  (49).txt  (5).txt  (50).txt
dataset/labels/val/: (14).txt  (15).txt  (16).txt  (22).txt  (23).txt  (25).txt  (40).txt  (46).txt
frontend/: .gitignore  index.html  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: index.js
frontend/src/components/: Historytable.jsx  ProcessingOverlay.jsx  ResultCard.jsx  StatusBanner.jsx  UploadZone.jsx
raw_data/lables/: (1).json  (1).txt  (10).txt  (11).txt  (12).txt  (17).txt  (18).txt  (19).txt  (2).txt  (20).txt  (24).txt  (28).txt  (29).txt  (30).txt  (31).txt  (34).txt  (35).txt  (36).txt  (37).txt  (38).txt  (4).txt  (41).txt  (43).txt  (44).txt  (47).txt  (48).txt  (6).txt  (7).txt  (8).txt  (9).txt
